--- a/css/style4.css
+++ b/css/style4.css
@@ -2,3 +2,10 @@
     display: flex;
     justify-content: space-around;
 }
+
+@media only screen and (max-width:750px){
+    .container{
+        display:block;
+        text-align: center;
+    }
+}
